--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <div class="about-containers">
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
-            <h3>Experience</h3>
+            <h3>Familiarty</h3>
             <p>Fresher<br /> But have a good understanting in Frontend Development</p>
           </div>
           <div class="details-container">
