--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <img src="./assets/linkedin.png" alt="My LinkedIn profile" class="icon"
           onclick="location.href='https://www.linkedin.com/in/m-kesavan-2507b6322'" />
         <img src="./assets/github.png" alt="My Github profile" class="icon"
-          onclick="location.href='https://github.com/Kesava00'" />
+          onclick="location.href='https://github.com/Kesavan140'" />
       </div>
     </div>
   </section>
