--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
   <nav id="desktop-nav">
-    <div class="logo">Kesavan M</div>
+    <div class="logo">KAMAL  .L</div>
     <div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
@@ -22,7 +22,7 @@
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">Kesavan </div>
+    <div class="logo">KAMAL</div>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
@@ -144,7 +144,7 @@
     <div class="contact-info-upper-container">
       <div class="contact-info-container">
         <img src="./assets/email.png" alt="Email icon" class="icon contact-icon email-icon" />
-        <p><a href="mailto:keaavan46@gmail.com">keaavan46@gmail.com</a></p>
+        <p><a href="mailto:kamlaksh2005@gmail.com">kamlaksh2005@gmail.com</a></p>
       </div>
       <div class="contact-info-container">
         <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
@@ -162,7 +162,7 @@
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2025 kesavan. All Rights Reserved.</p>
+    <p>Copyright &#169; 2025 kamal. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
