--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </nav>
   <section id="profile">
     <div class="section__pic-container">
-      <img class="profile_pic1" src="assets/image.pic4.jpg" alt="Kesavan profile picture" />
+      <img class="profile_pic1" src="assets/image.pic4.jpg" alt="Kamal profile picture" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
