--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">KESAVAb</div>
+    <div class="logo">KESAVAN</div>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
@@ -42,7 +42,7 @@
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
-      <h1 class="title">Kamal L</h1>
+      <h1 class="title">KESAVAN</h1>
       <p class="section__text__p2">Frontend Developer</p>
       <div class="btn-container">
         <button class="btn btn-color-2" onclick="window.open('./assets/KESAVAN.pdf')">
@@ -162,7 +162,7 @@
         </ul>
       </div>
     </nav>
-    <p>Copyright &#169; 2025 kamal. All Rights Reserved.</p>
+    <p>Copyright &#169; 2025 Kesavan. All Rights Reserved.</p>
   </footer>
   <script src="script.js"></script>
 </body>
