--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
@@ -32,6 +33,7 @@
       <div class="menu-links">
         <li><a href="#about" onclick="toggleMenu()">About</a></li>
         <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
+        <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
         <li><a href="#contact" onclick="toggleMenu()">Contact</a></li>
       </div>
     </div>
@@ -82,7 +84,10 @@
         </div>
         <div class="text-container">
           <p>
-            I am BCA Graduate with a passion for coding and Web development .Proficient in HTML , CSS ,BOOTSTRAP and foundamental knowledge in JAVASCRIPT Basic and  REACT.JS Basic.I aim to leverage my skills to create innovative digital solutions .I am dedicated to continuous learing and seeking for good opportunities to grow in the tech industry .
+            I am BCA Graduate with a passion for coding and Web development .Proficient in HTML , CSS ,BOOTSTRAP and
+            foundamental knowledge in JAVASCRIPT Basic and REACT.JS Basic.I aim to leverage my skills to create
+            innovative digital solutions .I am dedicated to continuous learing and seeking for good opportunities to
+            grow in the tech industry .
           </p>
         </div>
       </div>
@@ -136,6 +141,32 @@
         </div>
       </div>
     </div>
+    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
+  </section>
+  <section id="projects">
+    <p class="section__text__p1">Browse My Recent</p>
+    <h1 class="title">Projects</h1>
+    <center>
+        <div class="experience-details-container">
+          <div class="about-containers">
+            <div class="details-container color-container">
+              <div class="article-container">
+                <img src="./assets/project-1.png" alt="Project 1" class="project-img " />
+              </div>
+              <h2 class="experience-sub-title project-title">Project One</h2>
+              <div class="btn-container">
+                <button class="btn btn-color-2 project-btn"
+                  onclick="location.href='https://github.com/Kesavan140/webe.project'">
+                  Github
+                </button>
+                <button class="btn btn-color-2 project-btn" onclick="location.href='https://Webe-service.netlify.app/'">
+                  Live Demo
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+    </center>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
   <section id="contact">
@@ -158,6 +189,7 @@
         <ul class="nav-links">
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
+          <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
@@ -166,4 +198,5 @@
   </footer>
   <script src="script.js"></script>
 </body>
+
 </html>
