--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 </head>
 
 <body>
+
+            <!-- NAV -->
+
   <nav id="desktop-nav">
     <div class="logo">KESAVAN M</div>
     <div>
@@ -38,6 +41,9 @@
       </div>
     </div>
   </nav>
+
+            <!-- PROFILE -->
+
   <section id="profile">
     <div class="section__pic-container">
       <img class="profile_pic1" src="assets/image.pic4.jpg" alt="Kesavan profile picture" />
@@ -62,6 +68,9 @@
       </div>
     </div>
   </section>
+
+            <!-- ABOUT -->
+
   <section id="about">
     <p class="section__text__p1">Get To Know More</p>
     <h1 class="title">About Me</h1>
@@ -83,7 +92,7 @@
           </div>
         </div>
         <div class="text-container">
-          <p>
+          <p class="about-me-summary">
             I am BCA Graduate with a passion for coding and Web development .Proficient in HTML , CSS ,BOOTSTRAP and
             foundamental knowledge in JAVASCRIPT Basic and REACT.JS Basic.I aim to leverage my skills to create
             innovative digital solutions .I am dedicated to continuous learing and seeking for good opportunities to
@@ -94,6 +103,9 @@
     </div>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#skills'" />
   </section>
+
+            <!-- SKILLS -->
+
   <section id="skills">
     <p class="section__text__p1">Explore My</p>
     <h1 class="title">Skills</h1>
@@ -141,8 +153,10 @@
         </div>
       </div>
     </div>
-    <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#projects'" />
   </section>
+
+            <!-- PROJECTS -->
+
   <section id="projects">
     <p class="section__text__p1">Browse My Recent</p>
     <h1 class="title">Projects</h1>
@@ -169,6 +183,9 @@
     </center>
     <img src="./assets/arrow.png" alt="Arrow icon" class="icon arrow" onclick="location.href='./#contact'" />
   </section>
+
+            <!-- CONTACT -->
+
   <section id="contact">
     <p class="section__text__p1">Get in Touch</p>
     <h1 class="title">Contact Me</h1>
@@ -183,6 +200,9 @@
       </div>
     </div>
   </section>
+
+             <!-- FOOTER -->
+
   <footer>
     <nav>
       <div class="nav-links-container">
@@ -196,7 +216,8 @@
     </nav>
     <p>Copyright &#169; 2025 Kesavan. All Rights Reserved.</p>
   </footer>
-  <script src="script.js"></script>
-</body>
 
+  <script src="script.js"></script>
+
+</body>
 </html>
