--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <div class="logo">KESAVAN M</div>
     <div>
       <ul class="nav-links">
+        <li><a href="#desktop-nav">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -34,6 +35,7 @@
         <span></span>
       </div>
       <div class="menu-links">
+        <li><a href="#hamburger-nav" onclick="toggleMenu()">Home</a></li>
         <li><a href="#about" onclick="toggleMenu()">About</a></li>
         <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
         <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -46,7 +48,7 @@
 
   <section id="profile">
     <div class="section__pic-container">
-      <img class="profile_pic1" src="assets/image.pic4.jpg" alt="Kesavan profile picture" />
+      <img class="profile_pic1" src="assets/image.pic2.jpg" alt="Kesavan profile picture" />
     </div>
     <div class="section__text">
       <p class="section__text__p1">Hello, I'm</p>
@@ -76,7 +78,7 @@
     <h1 class="title">About Me</h1>
     <div class="section-container">
       <div class="section__pic-container">
-        <img src="./assets/image.pic3.jpg" alt="Profile picture" class="about-pic" />
+        <img src="./assets/image.pic4.jpg" alt="Profile picture" class="about-pic" />
       </div>
       <div class="about-details-container">
         <div class="about-containers">
@@ -207,6 +209,7 @@
     <nav>
       <div class="nav-links-container">
         <ul class="nav-links">
+          <li><a href="#desktop-nav">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
