--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">KESAVAN</div>
+    <div class="logo">KESAVAN M</div>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
