--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </div>
   </nav>
   <nav id="hamburger-nav">
-    <div class="logo">KESAVAN M</div>
+    <div class="logo">KESAVAN</div>
     <div class="hamburger-menu">
       <div class="hamburger-icon" onclick="toggleMenu()">
         <span></span>
@@ -121,13 +121,6 @@
               <div>
                 <h3>HTML</h3>
                 <p>Experienced</p>
-              </div>
-            </article>
-            <article>
-              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
-              <div>
-                <h3>BOOTSTRAP</h3>
-                <p>Basic</p>
               </div>
             </article>
             <article>
