--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="mediaqueries.css" />
 </head>
 
-<body>
+<body id="body">
 
             <!-- NAV -->
 
@@ -18,7 +18,7 @@
     <div class="logo">KESAVAN M</div>
     <div>
       <ul class="nav-links">
-        <li><a href="#desktop-nav">Home</a></li>
+        <li><a href="#body">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
         <li><a href="#projects">Projects</a></li>
@@ -35,7 +35,7 @@
         <span></span>
       </div>
       <div class="menu-links">
-        <li><a href="#hamburger-nav" onclick="toggleMenu()">Home</a></li>
+        <li><a href="#body" onclick="toggleMenu()">Home</a></li>
         <li><a href="#about" onclick="toggleMenu()">About</a></li>
         <li><a href="#skills" onclick="toggleMenu()">Skills</a></li>
         <li><a href="#projects" onclick="toggleMenu()">Projects</a></li>
@@ -209,7 +209,7 @@
     <nav>
       <div class="nav-links-container">
         <ul class="nav-links">
-          <li><a href="#desktop-nav">Home</a></li>
+          <li><a href="#body">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
