--- a/index.html
+++ b/index.html
@@ -126,6 +126,13 @@
             <article>
               <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
               <div>
+                <h3>BOOTSTRAP</h3>
+                <p>Experienced</p>
+              </div>
+            </article>
+            <article>
+              <img src="./assets/checkmark.png" alt="Experience icon" class="icon" />
+              <div>
                 <h3>CSS</h3>
                 <p>Experienced</p>
               </div>
