--- a/index.html
+++ b/index.html
@@ -85,12 +85,13 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Familiarty</h3>
-            <p>Fresher<br /> But have a good understanting in Frontend Development</p>
+            <p>Student<br /> But have a good understanting in Frontend Development like, html css java
+            react.js and githuh.</p>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
             <h3>Education</h3>
-            <p>B.C.A (Bachelor of computer application)<br /></p>
+            <p>B.C.A <br> (Bachelor of computer application)<br /></p>
           </div>
         </div>
         <div class="text-container">
