--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
           <div class="details-container">
             <img src="./assets/experience.png" alt="Experience icon" class="icon" />
             <h3>Familiarty</h3>
-            <p>Student<br /> But have a good understanting in Frontend Development like, html css java
-            react.js and githuh.</p>
+            <p>Student<br /> But have a good understanting in Frontend Development like, html css JavaScript
+            react.js and github.</p>
           </div>
           <div class="details-container">
             <img src="./assets/education.png" alt="Education icon" class="icon" />
